# frontier-allocation-for-budgeted-llm-inference

./: .geminiignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  REVIEWER_FIRST.md  START_HERE_CURRENT.md  TODO.md  migration_audit_20260510.md  post_migration_verification_20260510.md  pyproject.toml  references.bib  requirements-dev.txt  requirements.txt
archive/: README.md
batch/: plan_cohere_broad_accuracy_cost_table_nonloss_20260428T185326Z.sbatch  run_10_case_reasoning_diversity_trace_rerun_wulver.sh  run_best_internal_variants_real_model_accuracy_20260429.sbatch  run_cohere_broad_accuracy_cost_table_20260428T185326Z.sbatch  run_cohere_direct_reserve_v2_vs_external_l1_scaleup_20260428T221840Z.sbatch  run_direct_reserve_v2_cohere_20260428T021435Z.sbatch  run_direct_reserve_v2_cohere_20260428T_DR_V2_LONG.sbatch  run_full_pipeline_best_selector_on_88_external_losses_wulver.sbatch  run_full_score_completion_on_88_external_losses_wulver.sbatch  run_gold_absent_path_gap_diagnostic_wulver.sbatch  run_l1_loss_decomposition_best_selector_wulver_100case.sbatch  run_main3_external_vs_best3_internal_100case_wulver.sbatch  run_outcome_verifier_runtime_audit_wulver.sbatch  run_real_model_cost_validation_20260428T195414Z.sbatch  run_semantic_diversity_cohere10_20260427T215100Z.sbatch  run_semantic_diversity_cohere10_20260427T221800Z.sbatch  run_semantic_diversity_expanded_pool_20260428T143500Z.sbatch  run_semantic_diversity_loss_full_20260427T232800Z.sbatch  run_strategy_seeded_discovery_final_check_wulver.sbatch  run_strategy_seeded_discovery_on_66_gold_absent_wulver.sbatch  run_wulver_cohere_nonmath_external_validity_audit.sbatch  run_wulver_cohere_strict_f3_vs_external_l1_max_long.sbatch  run_wulver_offline_submission_audit.sbatch
configs/: README.md  anti_collapse_answer_group_refinement_bounded_eval_20260419.json  best_route_official_import_v1.json  branch_learning_corpus_schema_v1.json  conformal_thinking_mode_a_v1.json  dataset_experiment_readiness_bundles.json  diversity_needed_feasibility_v1.json  diversity_needed_gate_bounded_comparison_v1.json  early_answer_group_preservation_bounded_eval_20260419.json  external_baselines_registry.json  external_reasoning_datasets_registry.json  full_method_comparison_bundle_20260419.json  incumbent_challenger_commit_feasibility_20260419_v1.json  incumbent_challenger_commit_interaction_refinement_bounded_eval_20260419_v1.json  incumbent_challenger_commit_validation_20260419_v1.json  incumbent_challenger_metalevel_bounded_eval_20260419_v1.json  incumbent_challenger_near_tie_single_point_refinement_20260419_v1.json  incumbent_challenger_selector_refinement_bounded_eval_20260419_v1.json  l1_inference_adapter_v1.json  l1_official_full_adapter_v1.json  learning_how_hard_to_think_mode_a_v1.json  oracle_label_generator_interface_contract_v1.json  pilot_gsm8k.yaml  qstar_style_adapter_contract_v1.json  rest_mcts_adjacent_comparison_contract_v1.json  s1_budget_forcing_inference_only_v1.json  s1_full_or_official_adapter_v1.json  selected_selector_current.json  stop_vs_act_oracle_distilled_student_train_v1.json  stop_vs_act_oracle_label_plan_v1.json  stop_vs_act_oracle_pilot_state_selection_v1.json  stop_vs_act_oracle_selective_distillation_v1.json  tale_official_adapter_v1.json  tree_plv_adjacent_comparison_contract_v1.json  value_aware_exact_heavy_validation_20260419.json  value_aware_target_regime_comparison_v2.json  when_solve_when_verify_official_import_v1.json
datasets/: README.md
docs/: ABSTENTION_AWARE_COST_SENSITIVE_PARTIAL_ORDER_STATUS_2026_04_17.md  ABSTENTION_COST_SENSITIVE_PARTIAL_ORDER_CALIBRATION_SWEEP_STATUS_2026_04_17.md  ACTIVE_VALIDATION_JOBS_STATUS_20260523.md  AG01_AGREEMENT_ONLY_GATE_20260524.md  AGENT_WORKFLOW_RULES_20260527.md  ALLOCATION_NOT_STOP_NOTE.md  ALLOCATION_REGRET_TARGET_EXPERIMENT_STATUS_2026_04_17.md  AMBIGUITY_CALIBRATION_AND_FALLBACK_STATUS.md  ANONYMITY_RECHECK_20260427T180600Z.md  ANONYMIZATION_AUDIT_20260425T153307Z.md  ANONYMOUS_SUPPLEMENT_CHECKLIST_20260425T153307Z.md  ANONYMOUS_SUPPLEMENT_PREPARATION.md  ANSWER_GROUPED_OUTCOME_VERIFIER_RERANK_V1.md  ANTI_COLLAPSE_ANSWER_GROUP_REFINEMENT_BOUNDED_STATUS_2026_04_19.md  ANTI_COLLAPSE_ANSWER_GROUP_REFINEMENT_HARMED_FOCUSED_MIN_TUNING_STATUS_2026_04_19.md  ANTI_COLLAPSE_CALIBRATION_SWEEP_REPORT.md  ANTI_COLLAPSE_REPEAT_EXPANSION_FINE_MIN_TUNING_PASS_2026_04_20.md  APIN_SENT_BACK_RESUBMISSION_PACKAGE_20260530.md  APIN_WARNING_REFERENCE_CLEANUP_20260530.md  APPENDIX_FIGURE_AUDIT.md  ARTIFACT_INDEX_20260501.md  (+1061 more)
(+9870 files in other folders)
