[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-reasoning-budget-allocation"
version = "0.1.0"
description = "Research code for adaptive test-time compute allocation for LLM reasoning."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# Long embedded markdown / policy strings; line-length is lower value than readability here.
"scripts/build_hundred_current_full_vs_best_failure_statistics.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
