[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-reasoning-budget-allocation"
version = "0.1.0"
description = "Research code for adaptive test-time compute allocation for LLM reasoning."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# Long embedded markdown / policy strings; line-length is lower value than readability here.
"scripts/build_hundred_current_full_vs_best_failure_statistics.py" = ["E501"]
"scripts/build_baseline_repair_and_status_audit.py" = ["E501"]
"scripts/generate_external_baseline_completeness_report.py" = ["E501"]
"scripts/verify_l1_mode_b_import.py" = ["E501"]
"scripts/build_full_method_comparison_status_20260418.py" = ["E501"]
"scripts/run_hundred_hard_early_root_depth2_coverage_eval_20260420.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
